# my-app-projects

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  DEV.md  DOCKER.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  setup.sh
.github/workflows/: docker-image.yaml
app/: settings.py  settings_prod.py  urls.py
applications/projects/: apps.py  serializers.py
projects/: models.py  urls.py
projects/migrations/: 0001_initial.py
tests/: __init__.py  test_basic.py
